--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ p {
   min-height: 100vh;
   overflow: scroll;
 }
-.contents .logo {
+.logo {
   position: absolute;
   top: 10px;
   left: 10px;
@@ -303,8 +303,7 @@ p {
   background-image: url(../img/logo.png);
   z-index: 2;
 }
-
-.contents .bgrar {
+.bgrar {
   width: 100vw;
   height: 100vh;
   min-height: 100vh;
